deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopping
  name: shopping
  namespace: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
      - image: ghcr.io/mkanus/argocd-app:latest
        name: shopping
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shopping
  name: shopping-svc
  namespace: product
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shopping
